# e-cocin

./: .gitignore  CMakeLists.txt  Documentação_POO.md  README-e-cocin.md  README.md  documentation.md  teste.cpp
cmake/: third_party.cmake
resources/: ECOMMERCE-CIN.postman_collection.json
src/: ECocinApplication.cpp  main.cpp
src/app/: Migrations.h
src/controllers/: AddressController.h  ClientController.h  OrderController.h  ProductController.h
src/controllers/dto/: AddressBriefDto.h  AddressDto.h  AddressOutDto.h  ClientDto.h  ClientOutDto.h  OrderDto.h  OrderOutDto.h  ProductDto.h  ProductOutDto.h
src/domain/core/: Time.h  Uuid.h
src/domain/entities/: Address.cpp  Address.h  Client.cpp  Client.h  OrderItem.cpp  OrderItem.h  Product.cpp  Product.h  order.cpp  order.h
src/domain/repositories/: IAddressRepository.h  IClientrepository.h  IOrderRepository.h  IProductRepository.h
src/infra/db/: SqliteConnection.cpp  SqliteConnection.h
src/infra/repositories/: IClientrepository.h  IProductRepository.h
src/infra/repositories/sqlite/: AddressRepositorySqlite.cpp  AddressRepositorySqlite.h  AdressRepositorySqlite.cpp  ClientRepositorySqlite.cpp  ClientRepositorySqlite.h  ClientyRepositorySqlite.h  Helpers.h  OrderRepositorySqlite.cpp  OrderRepositorySqlite.h  ProductRepositorySqlite.cpp  ProductRepositorySqlite.h
src/services/: AddressService.cpp  AddressService.h  ClientService.cpp  ClientService.h  OrderService.cpp  OrderService.h  ProductService.cpp  ProductService.h
tests/: test_example.cpp
